k8s/gdpr-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdpr-app-api
  namespace: gdpr
spec:
  replicas: 2
  selector:
    matchLabels:
      app.com.roy/name: gdpr-app
      app.com.roy/component: api
      app.com.roy/instance: gdpr-app-api
  template:
    metadata:
      labels:
        app.com.roy/name: gdpr-app
        app.com.roy/component: api
        app.com.roy/instance: gdpr-app-api
    spec:
      containers:
        - name: gdpr-app-api
          image: subinoyroy/spring-gdpr-v1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 8081
              path: /hello
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 8081
              path: /hello
            periodSeconds: 5
          ports:
            - containerPort: 8081
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gdpr-app-api
  namespace: gdpr
spec:
  selector:
    app.com.roy/name: gdpr-app
    app.com.roy/component: api
    app.com.roy/instance: gdpr-app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: NodePort
