k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gdpr
  name: postgres-service
spec:
  type: ExternalName
  externalName: pg-14ea3b43-subinoyroy-bad0.j.aivencloud.com
