k8s/gdpr-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gdpr-app-ingress
  namespace: gdpr
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gdpr/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gdpr-app-api
                port:
                  number: 80
